5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1708_3063.log
== TEST (2019-04-29 14:16:20) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))
d = int(input("valor do dado: ")

if (d < 1) or ( d > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  f = 30*d - 20
		  print("INTEIRA")
elif (po == 50):
		  f = 15*d - 1
		  print("MALHA")
elif ( po == 100):		  
		  f = 20*d - 18
		  
-- ERROR:
File "XXXX", line 6
    if (d < 1) or ( d > 8):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:17:05) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))
d = int(input("valor do dado: "))

if (d < 1) or ( d > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  f = 30*d - 20
		  print("INTEIRA")
elif (po == 50):
		  f = 15*d - 1
		  print("MALHA")
elif ( po == 100):		  
		  f = 20*d - 18
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:25) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (d < 1) or ( d > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  f = 30*d - 20
		  print("INTEIRA")
elif (po == 50):
		  f = 15*d - 1
		  print("MALHA")
elif ( po == 100):		  
		  f = 20*d - 18
		  print("PLACA")
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (d < 1) or ( d > 8):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:45) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
		  
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:09) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)			
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(des)			
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:25:19) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)			
		  
-- EXECUTION TIME:
0.281198
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3063/main.py", line 19, in <module>
    print(des)			
NameError: name 'des' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:25:24) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada Invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)			
		  
-- EXECUTION TIME:
0.15761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3063/main.py", line 19, in <module>
    print(des)			
NameError: name 'des' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:36) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)			
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(des)			
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:25:43) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)			
		  
-- EXECUTION TIME:
0.135323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3063/main.py", line 19, in <module>
    print(des)			
NameError: name 'des' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:50) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  print("Entrada invalida")
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)			
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(des)			
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:59) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if (f < 1) or ( f > 8):
		  des =("Entrada invalida")
        print(des)		
elif (po < 50):
		  print("PO insuficiente")
elif (po >= 200):
		  des = 30*f - 20
		  print("INTEIRA")
elif (po == 50):
		  des = 15*f - 1
		  print("MALHA")
elif ( po == 100):		  
		  des = 20*f - 18
		  print("PLACA")
print(des)
			
		  
-- ERROR:
File "XXXX", line 8
    print(des)		
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:00) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
    d = (30*f - 20)
		a = ("INTEIRA")
		print(d)
elif ( po == 50):
	d = ( 15*f - 20)
	 a = ("MALHA")
	print(d)
elif (po == 100):
d = (20*f - 18)
a = ("PLACA")
print(d)
	 	
	 

		  
-- ERROR:
File "XXXX", line 11
    a = ("INTEIRA")
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:43:15) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*F - 1
	a = ("MALHA")
	
elif ( po == 100)
	d = 20*d - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
File "XXXX", line 17
    elif ( po == 100)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:43:22) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*F - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*d - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:43:48) 
-- CODE:
po = int(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:25) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = float(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:49) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:45:02) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- EXECUTION TIME:
0.126403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3063/main.py", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:05) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:48) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ").upper()
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 20
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:17) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ").upper()
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 28
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:38) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ").upper()
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
print(d)	
	
		


		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:46:49) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ").upper()
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
print(d)	
	
		


		  
-- EXECUTION TIME:
0.216857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3063/main.py", line 20, in <module>
    print(d)	
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:47:29) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ").upper()
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)	
	
		


		  
-- EXECUTION TIME:
0.143515
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:47:31) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ").upper()
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)	
	
		


		  
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:47:46) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))

if ( f <1 ) or ( f > 8):
	print("Entrada invalida")
elif (po < 50):
	print("PO insuficiente")
elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)	
	
		


		  
-- EXECUTION TIME:
0.236849
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:57) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


elif ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
	else:
		print("Entrada invalida")
	else:
	
		


		  
-- ERROR:
File "XXXX", line 6
    elif ( po >= 200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:09) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
	else:
		print("Entrada invalida")
	else:
	
		


		  
-- ERROR:
File "XXXX", line 20
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:20) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
	else:
		print("Entrada invalida")
	
	
		


		  
-- ERROR:
File "XXXX", line 20
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:29) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
		else:
		print("Entrada invalida")
	
	
		


		  
-- ERROR:
File "XXXX", line 20
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:51:08) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:51:15) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- EXECUTION TIME:
0.156103
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:52:23) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po == 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:52:40) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po == 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po == 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po == 100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- EXECUTION TIME:
0.135397
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:53:02) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po >= 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po >=100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:53:51) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po >= 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po >=100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- EXECUTION TIME:
0.288701
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:24) 
-- CODE:
po = float(input("pecas de ouro: "))
n = input("nome da armadura: ")
f = int(input("fator de destreza: "))


if ( po >= 200):
	d = 30*f - 20
	a = ("INTEIRA")
	print(d)
elif ( po >= 50):
	d = 15*f - 1
	a = ("MALHA")
	print(d)
elif ( po >=100):
	d = 20*f - 18
	a = ("PLACA")
	print(d)
elif (po < 50):
	print("PO insuficiente")
else:
	print("Entrada invalida")
		
		
	
	
		


		  
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
